--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --port 8080"
   },
   "dependencies": {
     "prop-types": "^15.8.1",
@@ -20,6 +20,7 @@
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
     "react-dice-complete": "^1.2.1",
-    "vite": "^3.1.0"
+    "vite": "^3.1.0",
+    "vite-plugin-webfonts": "^0.2.2"
   }
 }
